--- a/index.html
+++ b/index.html
@@ -18,32 +18,43 @@
 
 <body>
     <nav class="navbar navbar-dark bg-info">
-        <span class="navbar-brand mb-0 h1">GADGETS</span>
+        <span class="navbar-brand mb-0 h1">ToDo App</span>
     </nav>
+    <div class="container" id="todo-app">
+        <div class="card m-5" >
+            <div class="card-body p-5">
 
-    <div class="container">
-        <table class="table table-hover ">
-            <thead class="thead-dark">
-                <tr>
-                    <th>Name</th>
-                    <th>Price</th>
-                </tr>
-            </thead>
-            <tbody id="table-body"></tbody>
-        </table>
+                <p class="hide" id="empty">
+                    You don't have any todos!
+                </p>
+                <form class="form-inline">
+                    <input type="text" class="form-control" style="width: 30rem;" id="todo-title" />
+                    <button id="add-btn" class="btn btn-success ml-3 pl-5   pr-5"> ADD </button>
+                    <span class="btn btn-info ml-5">
+                        <a href id="remove-completed-btn" class="text-light">Remove completed items</a>
+                    </span>
+                </form>               
+                <ul id="todos">
+                </ul>               
+            </div>
+        </div>
     </div>
+    <script type="text/html" id="todo-item-template">
+        <label class="checkbox">
+            <input type="checkbox" class="completed-chk" <%- completed ? 'checked="checked"' : '' %> />
+            <%= title %>
+        </label>
+    </script>
     <div class="footer bg-info text-light">
         <p>© 2019 cxLoyalty Group, Inc.</p>
     </div>
-    <script type="text/template" id="gadget-template">
-        <td><%= name %></td>
-        <td><%= price %></td>
-    </script>
 
     <script src="js/lib/jquery-min.js"></script>
     <script src="js/lib/underscore-min.js"></script>
     <script src="js/lib/backbone-min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
