--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <nav class="navbar navbar-dark bg-info">
         <span class="navbar-brand mb-0 h1">GADGETS</span>
     </nav>
-
     <div class="container">
         <table class="table table-hover ">
             <thead class="thead-dark">
@@ -29,30 +28,23 @@
                     <th>Price</th>
                 </tr>
             </thead>
-            <tbody id="table-body"></tbody>
+            <tbody id="table-body">
+                
+            </tbody>
         </table>
     </div>
     <div class="footer bg-info text-light">
         <p>© 2019 cxLoyalty Group, Inc.</p>
     </div>
-    <script type="text/template" id="gadget-template">
-        <td><%= name %></td>
-        <td><%= price %></td>
-    </script>
+
 
     <script src="js/lib/jquery-min.js"></script>
     <script src="js/lib/underscore-min.js"></script>
     <script src="js/lib/backbone-min.js"></script>
+    <script src="js/model.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/view.js"></script>
     <script src="js/main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
